tests/baselines/reference/nonPrimitiveAccessProperty.errors.txt
nonPrimitiveAccessProperty.ts(3,3): error TS2339: Property 'nonExist' does not exist on type 'object'.
nonPrimitiveAccessProperty.ts(5,7): error TS2339: Property 'destructuring' does not exist on type '{}'.


==== nonPrimitiveAccessProperty.ts (2 errors) ====
    var a: object;
    a.toString();
    a.nonExist(); // error
      ~~~~~~~~
!!! error TS2339: Property 'nonExist' does not exist on type 'object'.
    
    var { destructuring } = a; // error
          ~~~~~~~~~~~~~
!!! error TS2339: Property 'destructuring' does not exist on type '{}'.
    var { ...rest } = a; // ok
    